--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./output.css">
 </head>
+
 <body>
-    
+    <div class="w-[100%] h-[150px] bg-[#F3FEFF] flex justify-around items-center">
+        <img src="./photo/Logo.png" alt="">
+        <div class="text-[#969999] flex items-center justify-around w-[40%]">
+            <p class="text-[#35AFBF] border-b border-b-[2px] border-b-[#35AFBF] mt-[10px] pb-[10px] font-medium">Home
+            </p>
+            <p>Services</p>
+            <p>About</p>
+            <p>The Team</p>
+            <p>Pricing</p>
+            <p>Contact</p>
+        </div>
+        <button class="bg-[#35AFBF] text-white w-[10%] h-[50px] text-[18px] font-medium rounded-[5px]">Sign Up</button>
+    </div>
+    <div class="w-[100%] h-[750px] bg-[#F3FEFF] flex items-center justify-around pt-[100px]">
+        <div class="mt-[-50px] w-[40%]">
+            <h1 class="text-[75px] w-[100%] leading-20"><span class="text-[#35AFBF]">Make</span> a Creative solutions
+                for your Creative <span class="text-[#35AFBF]">ideas.</span></h1>
+            <p class="w-[105%] text-[30px] text-[#707273] mt-[20px]">We are here to give you effective ideas. We help
+                the brands to become what they want. </p>
+            <button class="w-[200px] h-[60px] rounded-[5px] bg-[#35AFBF] mt-[30px] text-[18px] text-white">Get
+                Started</button>
+        </div>
+        <img class="ml-[-50px]" src="./photo/image background.png" alt="">
+    </div>
+    <div>
+        <img class="absolute top-[245px] left-[820px]" src="./photo/image (2).png" alt="">
+        <img class="absolute top-[340px] left-[1425px] z-1" src="./photo/icon (1).png" alt="">
+        <img class="absolute top-[230px] left-[860px] z-1" src="./photo/icon.png" alt="">
+        <img class="absolute top-[715px] left-[870px] z-1" src="./photo/icon (2).png" alt="">
+        <img class="absolute top-[680px] left-[1385px]  z-1" src="./photo/icon (3).png" alt="">
+        <img class="absolute top-[200px] left-[820px]" src="./photo/icon background.png" alt="">
+        <img class="absolute top-[300px] left-[1380px]" src="./photo/icon background (1).png" alt="">
+        <img class="absolute top-[680px] left-[840px]" src="./photo/icon background (2).png" alt="">
+        <img class="absolute top-[650px] left-[1350px]" src="./photo/icon background (3).png" alt="">
+    </div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
 </body>
+
 </html>
