--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,39 @@
         <img class="absolute top-[680px] left-[840px]" src="./photo/icon background (2).png" alt="">
         <img class="absolute top-[650px] left-[1350px]" src="./photo/icon background (3).png" alt="">
     </div>
+    <div class="text-center mt-[100px] h-[600px]">
+        <h1 class="text-[40px] font-medium">We provide great services</h1>
+        <p class="w-[40%] ml-[450px] mt-[20px] text-[#707273]">We help people to think independent. Be the boss of your
+            brand and be the storyteller. An appropriate
+            approach.</p>
+        <div class="flex gap-[20px] mt-[50px]">
+            <div class="w-[20%] bg-[#A3E0E8] h-[300px] ml-[120px] rounded-[15px] border-[2px] border-[#35AFBF]">
+                <img class="ml-[110px] mt-[50px]" src="./photo/icon (4).png" alt="">
+                <h3 class="mt-[15px] text-[22px] font-medium">Web Design</h3>
+                <p class="w-[70%] ml-[40px] mt-[10px] text-[18px]">Powerful creations for the practice safe design.</p>
+            </div>
+
+            <div class="w-[20%] ">
+                <img class="ml-[110px] mt-[50px]" src="./photo/icon (12).png" alt="">
+                <h3 class="mt-[15px] text-[22px] font-medium">Web Design</h3>
+                <p class="w-[70%] ml-[40px] mt-[10px] text-[18px]">Powerful creations for the practice safe design.</p>
+            </div>
+
+            <div class="w-[20%]  h-[300px]">
+                <img class="ml-[110px] mt-[50px]" src="./photo/background (1).png" alt="">
+                <h3 class="mt-[15px] text-[22px] font-medium">Web Design</h3>
+                <p class="w-[70%] ml-[40px] mt-[10px] text-[18px]">Powerful creations for the practice safe design.</p>
+            </div>
+
+            <div class="w-[20%] h-[300px]">
+                <img class="ml-[110px] mt-[50px]" src="./photo/background (1).png" alt="">
+                <h3 class="mt-[15px] text-[22px] font-medium">Web Design</h3>
+                <p class="w-[70%] ml-[40px] mt-[10px] text-[18px]">Powerful creations for the practice safe design.</p>
+            </div>
+        </div>
+        <img class="absolute top-[1255px] left-[905px]" src="./photo/icon (13).png" alt="">
+        <img class="absolute top-[1255px] left-[1225px]" src="./photo/Group 59.png" alt="">
+    </div>
     <div></div>
     <div></div>
     <div></div>
