--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
 
             <div class="w-[27%] h-[300px] ">
                 <img class="ml-[165px] mt-[50px]" src="./photo/icon (6).png" alt="">
-                <h3 class="mt-[15px] text-[22px] font-medium">Sleek and smooth animation</h3>
+                <h3 class="mt-[15px] text-[22px] font-medium">Crafted with detail</h3>
                 <p class="w-[80%] ml-[40px] mt-[10px] text-[18px]">Powerful creations for the practice safe design
                     creations for the prac.</p>
                 <img class="mt-[30px] ml-[75px]" src="./photo/Style.png" alt="">
@@ -124,7 +124,7 @@
 
             <div class="w-[27%] h-[300px] ">
                 <img class="ml-[165px] mt-[50px]" src="./photo/icon (7).png" alt="">
-                <h3 class="mt-[15px] text-[22px] font-medium">Sleek and smooth animation</h3>
+                <h3 class="mt-[15px] text-[22px] font-medium">Save your time</h3>
                 <p class="w-[80%] ml-[40px] mt-[10px] text-[18px]">Powerful creations for the practice safe design
                     creations for the prac.</p>
                 <img class="mt-[30px] ml-[75px]" src="./photo/Style.png" alt="">
@@ -132,7 +132,7 @@
 
             <div class="w-[27%] h-[300px] ml-[100px] ">
                 <img class="ml-[165px] mt-[50px]" src="./photo/icon (8).png" alt="">
-                <h3 class="mt-[15px] text-[22px] font-medium">Sleek and smooth animation</h3>
+                <h3 class="mt-[15px] text-[22px] font-medium">Responsive on any device</h3>
                 <p class="w-[80%] ml-[40px] mt-[10px] text-[18px]">Powerful creations for the practice safe design
                     creations for the prac.</p>
                 <img class="mt-[30px] ml-[75px]" src="./photo/Style.png" alt="">
@@ -140,7 +140,7 @@
 
             <div class="w-[27%] h-[300px]">
                 <img class="ml-[165px] mt-[50px]" src="./photo/icon (9).png" alt="">
-                <h3 class="mt-[15px] text-[22px] font-medium">Sleek and smooth animation</h3>
+                <h3 class="mt-[15px] text-[22px] font-medium">Easy to customize</h3>
                 <p class="w-[80%] ml-[40px] mt-[10px] text-[18px]">Powerful creations for the practice safe design
                     creations for the prac.</p>
                 <img class="mt-[30px] ml-[75px]" src="./photo/Style.png" alt="">
@@ -148,7 +148,7 @@
 
             <div class="w-[27%] h-[300px]">
                 <img class="ml-[165px] mt-[50px]" src="./photo/icon (10).png" alt="">
-                <h3 class="mt-[15px] text-[22px] font-medium">Sleek and smooth animation</h3>
+                <h3 class="mt-[15px] text-[22px] font-medium">Quickly effective support</h3>
                 <p class="w-[80%] ml-[40px] mt-[10px] text-[18px]">Powerful creations for the practice safe design
                     creations for the prac.</p>
                 <img class="mt-[30px] ml-[75px]" src="./photo/Style.png" alt="">
