--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,12 @@
                 </div>
             </div>
     </div>
-    <div></div>
+
+    <div class="w-[100%] h-[350px] text-center">
+        <h2 class="text-[#252626] text-[40px] mt-[100px] w-[55%] ml-[320px] font-bold">People have tried to predict the future since the dawn of time.</h2>
+        <button class="mt-[40px] w-[200px] h-[50px] bg-[#35AFBF] rounded-[5px] text-[18px] text-white">Get Started</button>
+    </div>
+    
 </body>
 
 </html>
