--- a/src/index.html
+++ b/src/index.html
@@ -158,22 +158,86 @@
 
     <div class="w-[100%] h-[420px] bg-[#D1F4F9]">
         <img class="ml-[650px] pt-[80px]" src="./photo/Logo (1).png" alt="">
-        <p class="text-[#4B4C4C] text-[22px] w-[45%] font-medium text-center mt-[40px] ml-[360px]">“Always a pleasure to work with The Agency Creative. Such professional and happy people and you know you’ll
+        <p class="text-[#4B4C4C] text-[22px] w-[45%] font-medium text-center mt-[40px] ml-[360px]">“Always a pleasure to
+            work with The Agency Creative. Such professional and happy people and you know you’ll
             receive a quick innovative and no fuss service.”</p>
-            <div class="flex ml-[610px] mt-[40px] gap-[10px]">
-                <img src="./photo/Image (1).png" alt="">
-                <div>
-                    <h3 class="text-[20px] font-medium">Johnatan Doe</h3>
-                    <p class="mt-[5px]">Web Designer</p>
-                </div>
+        <div class="flex ml-[610px] mt-[40px] gap-[10px]">
+            <img src="./photo/Image (1).png" alt="">
+            <div>
+                <h3 class="text-[20px] font-medium">Johnatan Doe</h3>
+                <p class="mt-[5px]">Web Designer</p>
             </div>
+        </div>
     </div>
 
     <div class="w-[100%] h-[350px] text-center">
-        <h2 class="text-[#252626] text-[40px] mt-[100px] w-[55%] ml-[320px] font-bold">People have tried to predict the future since the dawn of time.</h2>
-        <button class="mt-[40px] w-[200px] h-[50px] bg-[#35AFBF] rounded-[5px] text-[18px] text-white">Get Started</button>
+        <h2 class="text-[#252626] text-[40px] mt-[100px] w-[55%] ml-[320px] font-bold">People have tried to predict the
+            future since the dawn of time.</h2>
+        <button class="mt-[40px] w-[200px] h-[50px] bg-[#35AFBF] rounded-[5px] text-[18px] text-white">Get
+            Started</button>
     </div>
-    
+
+    <footer class="w-[100%] h-[630px] bg-[#2C353E]">
+        <div class="w-[80%] m-auto pt-[100px] flex justify-between border-b-[1px] border-b-[#4B4B4B] pb-[50px] pr-[70px]">
+            <div class="leading-10">
+                <h3 class="text-[22px] text-[white]">Freelancer</h3>
+                <p class="text-[38px] text-white mt-[10px] mb-[10px]"><sup class="text-[16px]">$</sup>19<sub class="text-[16px]">/mo</sub></p>
+                <p class="text-[#ffffff80]">5 Psd fles included</p>
+                <p class="text-[#ffffff80]">24 hours free support</p>
+                <p class="text-[#ffffff80]">Multiple features installed</p>
+                <p class="text-[#ffffff80]">100 Elements PSD + Al</p>
+                <button class="w-[150px] h-[50px] border-[1px] border-[#FFFFFF4D] mt-[20px] rounded-[12px] text-[18px] text-white">Subscribe</button>
+            </div>
+            
+            <div class="leading-10">
+                <h3 class="text-[22px] text-[white]">Corporate</h3>
+                <p class="text-[38px] text-white mt-[10px] mb-[10px]"><sup class="text-[16px]">$</sup>24<sub class="text-[16px]">/mo</sub></p>
+                <p class="text-[#ffffff80]">5 Psd fles included</p>
+                <p class="text-[#ffffff80]">24 hours free support</p>
+                <p class="text-[#ffffff80]">Multiple features installed</p>
+                <p class="text-[#ffffff80]">100 Elements PSD + Al</p>
+                <button class="w-[150px] h-[50px] border-[1px] border-[#FFFFFF4D] mt-[20px] rounded-[12px] text-[18px] text-white">Subscribe</button>
+            </div>
+
+            <div class="leading-10">
+                <h3 class="text-[22px] text-[white]">Agency</h3>
+                <p class="text-[38px] text-white mt-[10px] mb-[10px]"><sup class="text-[16px]">$</sup>25<sub class="text-[16px]">/mo</sub></p>
+                <p class="text-[#ffffff80]">5 Psd fles included</p>
+                <p class="text-[#ffffff80]">24 hours free support</p>
+                <p class="text-[#ffffff80]">Multiple features installed</p>
+                <p class="text-[#ffffff80]">100 Elements PSD + Al</p>
+                <button class="w-[150px] h-[50px] border-[1px] border-[#FFFFFF4D] mt-[20px] rounded-[12px] text-[18px] text-white">Subscribe</button>
+            </div>
+
+            <div class="leading-10">
+                <h3 class="text-[22px] text-[white]">Enterprise</h3>
+                <p class="text-[38px] text-white mt-[10px] mb-[10px]"><sup class="text-[16px]">$</sup>15<sub class="text-[16px]">/mo</sub></p>
+                <p class="text-[#ffffff80]">5 Psd fles included</p>
+                <p class="text-[#ffffff80]">24 hours free support</p>
+                <p class="text-[#ffffff80]">Multiple features installed</p>
+                <p class="text-[#ffffff80]">100 Elements PSD + Al</p>
+                <button class="w-[150px] h-[50px] border-[1px] border-[#FFFFFF4D] mt-[20px] rounded-[12px] text-[18px] text-white">Subscribe</button>
+            </div>
+        </div>
+
+        <div class="w-[80%] m-auto justify-between flex pt-[50px]">
+            <div class="flex gap-[40px] text-white">
+                <p>Home</p>
+                <p>Privacy</p>
+                <p>Terms & Conditions</p>
+                <p>About us</p>
+                <p>Contact us</p>
+            </div>
+            <div class="flex gap-[40px]">
+                <img src="./photo/Icon01.png" alt="">
+                <img src="./photo/Icon02.png" alt="">
+                <img src="./photo/Icon03.png" alt="">
+                <img src="./photo/Icon04.png" alt="">
+            </div>
+        </div>
+        <p class="ml-[150px] mt-[20px] text-[#ffffff40]">@ A new era 2016. Awesome wireframe  by Andrei Dorin</p>
+    </footer>
+
 </body>
 
 </html>
